[package]
name = "dxp-axum-session"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0.203", features = ["derive"], optional = true }
chrono = { version = "^0.4.38", features = ["clock"], optional = true }
serde_json = { version = "^1.0.68", optional = true }
sea-orm ={ version = "^1.0.1", default-features = false, features = [
    "macros",
    "with-chrono",
    "with-json",
], optional = true }
sea-orm-migration = { version = "^1.0.1", optional = true}
axum_session = { version = "0.14.0", default-features = false, optional = true }

[features]
default = ["db_pool"]
db_pool = ["dep:axum_session", "dep:serde", "dep:chrono", "dep:serde_json", "dep:sea-orm"]
migration = ["dep:sea-orm-migration"]

